src/kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: onlineeventbookingabdulwasay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: 22i1198/event-service:latest
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbookingabdulwasay
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
