src/kubernetes/deployment-service-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: onlineeventbookingabdulwasay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: 22i1198/gateway-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: onlineeventbookingabdulwasay
spec:
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
