src/kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: onlineeventbookingabdulwasay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 22i1198/notification-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: onlineeventbookingabdulwasay
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
