src/kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: onlineeventbookingabdulwasay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 22i1198/user-service:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: onlineeventbookingabdulwasay
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
