src/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-booking-ingress
  namespace: onlineeventbookingabdulwasay

spec:
  ingressClassName: nginx
  rules:
    - host: eventbooking.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
